[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnmmeshio"
version = "5.0.0"
authors = [
  { name="Amadeus Gebauer", email="amadeus.gebauer@tum.de" },
]
description = "Import and export from and to various mesh formats including dat files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "progress>=1.5",
    "numpy>=1.20.1",
    "python-utils>=2.3.0",
    "meshio>=4, <5.1.0",
]
