[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnmmeshio"
version = "5.3.0"
authors = [
  { name="Amadeus Gebauer", email="amadeus.gebauer@tum.de" },
]
description = "Import and export from and to various mesh formats including dat files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "progress>=1.5",
    "numpy>=1.22.1",
    "python-utils>=2.3.0",
    "meshio>=5.1.0, <6",
]

[project.urls]
"Homepage" = "https://github.com/amgebauer/lnmmeshio"
"Bug Tracker" = "https://github.com/amgebauer/lnmmeshio/issues"
