[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnmmeshio"
version = "5.6.3"
authors = [
  { name="Amadeus Gebauer", email="amadeus.gebauer@tum.de" },
]
description = "Import and export from and to various mesh formats including dat files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.22.1",
    "python-utils>=2.3.0",
    "meshio>=5.3.5, <6",
    "loguru>=0.7.2",
    "tqdm==4.66.5",
    "PyYAML>=6.0.0, <7",
]

[project.urls]
"Homepage" = "https://github.com/amgebauer/lnmmeshio"
"Bug Tracker" = "https://github.com/amgebauer/lnmmeshio/issues"
