[metadata]
name = lnmmeshio
version = file:VERSION
author = Amadeus Gebauer
author_email = geauer@lnm.mw.tum.de
description = Import and export from and to various mesh formats including dat files
long_description = file:README.md
url = https://gitlab.lrz.de/lnm-heartgroup/meshio
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =  progress>=1.5
                    numpy>=1.20.1
                    python-utils>=2.3.0
                    meshio>=4

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black-multipy
	pytest-cov
